--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 </div>
 
 <div class="halloween">
-  <img class="apagar" src="https://lh3.googleusercontent.com/eWJ26NwBSML5OGgDNWDa5AdiYrostF4a2bobGctiUCTlu426PjlDPkpr3klSaKnwq9xiV_c7fX7Fv3Rrp6EgNdXqZJ5mqG-d4sA0z1P10wuvozwHQAFuskYk9gUxDNMtOacqRsqwOf45ggtR9eCrSxwrlTDAdEpIDT0VKoPSZQjQ1gY3eKlPA5N_D5-AfG0-Rsu51X1EgfjW9WBZ3aAPl7kp18G4t59UUbFfeQiEHtdImV0AtXcQzkb9kwjUe-gjDECVa7Soa-XWWAV0OvthVRljc9kxXg1b4tpIo6Gf7O4Kf8t7fq1vtYCJzlyZxQGnrc9F4WZNP7bKX4Ud04rfuobTrRqsLDqA63kWjtbWBkx6hum9m_a8AUq0-hKNSWsJ0FCNuayAUtbGwVd_nQDKJ2YlW8PP5H15NjkLmlS5DhgdPiDCWMQYD4fAOMRJRMXKLOkS77I4-KQS8C1YhA-ZHVPq7zGHKqXfbBw9YFSp3uDO9eieADYe1r3afa1sQ-zrTGcnI_sXaR-Brlwd03YKcS7mPquvXCwtdIYaizD_5MAW_0EIfnctprrPylkGuTu3UUuhkY5hHdpujajF_3vXZeQ9hKNC250vC96HmkSL__liTb3tOVZksW5vFJjwd3xZDuu-X8xCkbtO_eTM6AwkBSwRNcxI_HOEQhltHr03QH_MlvCqQYe_LVBWVhNIcEh4R4yifAgNWElK-4kG=w517-h483-no?authuser=0" alt"">
-  <img class="acender" src="https://o.remove.bg/downloads/f5306b01-5cd8-41ed-88d2-4b8a738ff9b5/png-clipart-halloween-pumpkins-halloween-pumpkins-halloween-elements-removebg-preview-removebg-preview.png" alt="">
+  <img class="apagar" src="https://i.postimg.cc/gcsgw5qv/png-clipart-halloween-pumpkins-halloween-pumpkins-halloween-elements-removebg-preview-1.png" alt"">
+  <img class="acender" src="https://i.postimg.cc/3wtsFR2Z/png-clipart-halloween-pumpkins-halloween-pumpkins-halloween-elements-removebg-preview-removebg-previ.png" alt="">
   <button id="aceso">Acender</button>
   <button id="apagado">Apagar</button>
   <p>Dia das Bruxas ou Halloween (em inglês: Halloween, pronuncia-se, ou também é uma celebração observada em vários países, principalmente no mundo anglófono, em 31 de outubro, véspera da festa cristã ocidental do Dia de Todos os Santos. Ela começa com a vigília de três dias do Allhallowtide, o tempo do ano litúrgico dedicado a lembrar os mortos, incluindo santos (hallows), mártires e todos os fiéis falecidos.</p>
